src/routes/movieSelect/searchPage.css
.search-page {
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 100vh;
  color: #fff;
}

.search-bar-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 10px;
  width: 100%;
}

.search-bar {
  width: 100%;
  max-width: 400px;
  padding: 12px 15px;
  border-radius: 20px;
  border: 2px solid #8c2b8c;
  background-color: #2e2e44;
  color: #fff;
  font-size: 16px;
}

.search-bar:focus {
  outline: none;
  border-color: #e72871;
}

.filter-select {
  padding: 12px 15px;
  border-radius: 20px;
  border: 2px solid #8c2b8c;
  background-color: #2e2e44;
  color: #fff;
  font-size: 16px;
}

.filter-select:focus {
  outline: none;
  border-color: #e72871;
}

.search-button {
  padding: 10px;
  border-radius: 50%;
  background-color: #8c2b8c;
  border: none;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
}

.search-button img {
  width: 24px;
  height: 24px;
  transition: transform 0.3s ease;
}

.search-button:focus {
  outline: none;
  background-color: #e72871;
}

.search-button:focus img {
  transform: scale(1.1);
}

.search-button:hover {
  background-color: #6a1a6a;
}

.search-button:hover img {
  transform: scale(1.1);
}


/* Results container */
.results-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: 20px;
  width: 100%;
  max-width: 1200px;
  margin-top: 20px;
}

/* Info card */
.info-card {
  background-color: #1e1e2f;
  border-radius: 15px;
  padding: 10px;
  box-shadow: 0 8px 15px rgba(0,0,0,0.2);
  transition: transform 0.3s ease, box-shadow 0.3s ease;
  position: relative;
}

.info-card:hover {
  transform: translateY(-10px);
  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4), 0 -1px 6px rgba(0, 0, 0, 0.1);
}

.poster {
  width: 100%;
  height: auto;
  object-fit: cover;
  border-radius: 10px;
  box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
  transition: box-shadow 0.3s ease, transform 0.3s ease;
}

.poster:hover {
  box-shadow: 0 8px 20px rgba(255, 255, 255, 0.4);
  transform: scale(1.05);
}

.poster-button {
  border: none;
  background: none;
  padding: 0;
  cursor: pointer;
}

.platforms {
  display: flex;
  justify-content: center;
  gap: 10px;
  margin-top: 20px;
}

.platform-icon {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  transition: transform 0.3s ease;
}

.platform-icon:hover {
  transform: scale(1.2);
}

/* Dialog overlay */
.dialog-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.dialog-box {
  position: relative; 
  background-color: #1e1e2f;
  padding: 20px;
  border-radius: 20px;
  width: 80%;
  max-width: 800px;
  color: white;
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

/* Backdrop image */
.backdrop-image {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center;
  filter: blur(3px);
}

/* Dialog content */
.dialog-content {
  position: relative;
  overflow-y: auto;
}

.dialog-content p {
  color: #ffffff;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
  background-color: rgba(0, 0, 0, 0.6);
  padding: 8px;
  border-radius: 4px;
  margin: 8px 0;
  position: relative;
  z-index: 1;
}

.dialog-content h2 {
  color: #f4a261;
}

/* Streaming options */
.streaming-options {
  display: flex;
  justify-content: center;
  gap: 15px;
  margin-top: 20px;
  z-index: 1;
}

.streaming-options img {
  width: 50px;
  height: 50px;
  border-radius: 10px;
  transition: transform 0.3s ease;
}

.streaming-options img:hover {
  transform: scale(1.1);
}

.close-button {
  position: absolute;
  top: 10px; 
  right: 10px; 
  background: none;
  border: none;
  font-size: 24px;
  color: #f77f00;
  cursor: pointer;
  transition: color 0.3s ease;
  z-index: 1;
}

.close-button:hover {
  color: #f4a261;
}

.loading-message{
 color: #f4a261;
 padding: 100px;
 font-size: 24px;
 text-align: center;
 animation: fadeInOut 1.5s ease-in-out infinite;
}

@keyframes fadeInOut {
  0%, 100% {
    opacity: 0.5;
  }
  50% {
    opacity: 1;
  }
}

